--- a/03_CSS_Variables/index.html
+++ b/03_CSS_Variables/index.html
@@ -19,7 +19,7 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="./img/landscape.jpg">
 
   <style>
 
@@ -34,6 +34,7 @@
       font-family: 'helvetica neue', sans-serif;
       font-weight: 100;
       font-size: 50px;
+      overflow-x: hidden;
     }
 
     .controls {
@@ -43,6 +44,7 @@
     input {
       width: 100px;
     }
+
   </style>
 
   <script>
